--- a/src/components/ProductList/ProductList.css
+++ b/src/components/ProductList/ProductList.css
@@ -1,7 +1,11 @@
 .list {
-    display: flex;
+    display: grid;
     flex-wrap: wrap;
+    grid-template-columns: 1fr;
     justify-content: center;
+    width: 100%;
+    padding: 0 5px;
+    gap: 15px;
 }
 
 .item {
